[package]
name = "sync_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-session = "^0.4.0"
futures = "^0.3"
async-stream = "^0.2.0"
env_logger = "^0.9.0"
log = "^0.4.14"
serde = "1.0.160"
serde_json = "^1.0.79"
actix-multipart = "^0.3"
actix-cors = "0.6.4"
rust-ini = "0.18.0"
lazy_static = "1.4.0"
